Retarget to win10 sdk

--- a/src/sho_ls/sho_ls_dll/SHO_LS_DLL.vcxproj
+++ b/src/sho_ls/sho_ls_dll/SHO_LS_DLL.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{880C1CCD-606A-49B9-8891-2794EAB4167C}</ProjectGuid>
     <RootNamespace>SHO_LS_DLL</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
