--- a/src/sho_ws/SHO_WS_DLL/SHO_WS_DLL.vcxproj
+++ b/src/sho_ws/SHO_WS_DLL/SHO_WS_DLL.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{59368FFB-7EDD-46E7-BD58-19EC6415BB1D}</ProjectGuid>
     <RootNamespace>SHO_WS_DLL</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
