--- a/src/engine/engine.vcxproj
+++ b/src/engine/engine.vcxproj
@@ -15,6 +15,7 @@
     <RootNamespace>engine</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <ProjectName>engine</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
