--- a/src/lib_server/lib_server.vcxproj
+++ b/src/lib_server/lib_server.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{07F4D39F-4AAF-4848-BEC1-F0FB9A7A69B3}</ProjectGuid>
     <RootNamespace>LIB_Server</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
