--- a/src/sho_gs/SHO_GS_DLL/SHO_GS_DLL.vcxproj
+++ b/src/sho_gs/SHO_GS_DLL/SHO_GS_DLL.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{48E6A734-BEC4-4317-9102-67A9A3C030E9}</ProjectGuid>
     <RootNamespace>SHO_GS_DLL</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
