--- a/src/sho_ls/sho_ls_lib/sho_ls_lib.vcxproj
+++ b/src/sho_ls/sho_ls_lib/sho_ls_lib.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{ABFAB753-FF1C-47E7-AA06-60FFCEC3C8FF}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
