--- a/src/tgamectrl/tgamectrl.vcxproj
+++ b/src/tgamectrl/tgamectrl.vcxproj
@@ -174,6 +174,7 @@
     <ProjectGuid>{25FC645B-A461-4FDD-848A-4F7C5522313A}</ProjectGuid>
     <RootNamespace>TGameCtrl</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
