--- a/src/triggerinfo/triggerinfo.vcxproj
+++ b/src/triggerinfo/triggerinfo.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{DE7958CD-934E-4AF9-8A22-CCE329B364FB}</ProjectGuid>
     <RootNamespace>triggerinfo</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release|Win32'" Label="Configuration">
