--- a/src/triggervfs/triggervfs.vcxproj
+++ b/src/triggervfs/triggervfs.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{3D8FB37B-21F3-4DEF-9B78-6FE270C73494}</ProjectGuid>
     <RootNamespace>TriggerVFS</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug|Win32'" Label="Configuration">
