Fix world server link errors

--- a/src/sho_ws/SHO_WS_DLL/SHO_WS_DLL.vcxproj
+++ b/src/sho_ws/SHO_WS_DLL/SHO_WS_DLL.vcxproj
@@ -99,7 +99,7 @@
       <Culture>0x0412</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;SHO_WS_LIB.lib;lib_util.lib;lib_server.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)SHO_WS.dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
